--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -6,12 +6,12 @@
 }
 
 .services_item {
-    border-radius: 5%;
     list-style-type: none;
     width: 33.33%;
 }
 
 .services_list .services_img {
+    border-radius: 8px;
     display: block;
     width: 406px;
     height: 250px;
