--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -1,16 +1,24 @@
 /* >>>>> Стили services <<<<<  */
 
+.services {
+    background-color: rgba(251, 242, 218, 0.2)
+}
+
 .services_list {
     display: flex;
+    justify-content: space-around;
     padding: 0%;
 }
 
 .services_item {
     list-style-type: none;
     width: 33.33%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+    border-radius: 5px;
 }
 
 .services_list .services_img {
+    background-color: #C4C4C4;
     border-radius: 8px;
     display: block;
     width: 406px;
