--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -6,8 +6,20 @@
 
 .services_list {
     display: flex;
-    justify-content: space-around;
-    padding: 0%;
+    list-style: none;
+    padding-left: 81px;
+    padding-right: 81px;
+    padding-bottom: 100px;
+    margin: 0;
+}
+
+.services_card {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
 
 .services_item {
@@ -17,7 +29,7 @@
     border-radius: 5px;
 }
 
-.services_list .services_img {
+.services_img {
     background-color: #C4C4C4;
     border-radius: 8px;
     display: block;
@@ -25,6 +37,29 @@
     height: 250px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.services_button {
+    display: block;
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 24px;
+    color: #FFFFFF;
+    text-decoration: none;
+    background-color: #D46240;
+    border-radius: 5px;
+    margin-bottom: 33px;
+    margin-left: 121px;
+    margin-right: 121px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+.services ul {
+    margin: 0;
+    padding: 0;
 }
 
 .services_list h3 {
