--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -62,6 +62,10 @@
     padding: 0;
 }
 
+.services_item a {
+    margin-top: auto;
+}
+
 .services_list h3 {
     font-family: "Raleway", sans-serif;
     font-style: normal;
