--- a/src/styles/blocks/_location.scss
+++ b/src/styles/blocks/_location.scss
@@ -1,10 +1,27 @@
 .location {
-    
+    background-color: rgba(251, 242, 218, 0.2);
 }
 
 .location_list {
     display: flex;
     padding: 0%;
+    list-style: none;
+}
+
+.location_list a {
+    color: #FBF2DA;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    text-decoration: none;
+    margin-top: auto;
+}
+
+.location_list h3 {
+    color: #FBF2DA;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 40px;
 }
 
 .location_wrap {
