--- a/src/styles/blocks/_team.scss
+++ b/src/styles/blocks/_team.scss
@@ -1,18 +1,51 @@
 /* >>>>> Стили team <<<<<  */
 
+.team {
+    background-color: #FBF2DA;
+}
+
 .team_list {
     display: flex;
     padding: 0%;
+    border-radius: 8px;
 }
 
 .team_item {
+    list-style: none;
     margin-left: auto;
     margin-right: auto;
+}
+
+.team_item .name {
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 24px;
+    position: absolute;
+    display: block;
+    bottom: 5px;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin: 0;
+    background-color: rgba(21, 43, 60, 0.7);
+    color: #fbf2da;
+    border-radius: 8px;
+}
+
+.team_card:hover {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    box-shadow: 0 0 5px #d46240;
 }
 
 .team_img {
     width: 297px;
     height: 297px;
+    border-radius: 8px;
 }
 
 .team .team_title {
