--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -14,7 +14,6 @@
 }
 
 .services_card {
-    padding: 15px;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -22,21 +21,37 @@
     border-radius: 5px;
 }
 
+.services_card:hover {
+    height: 100%;
+    box-shadow: 0 0 30px #d46240;
+}
+
 .services_item {
+    padding: 15px;
     list-style-type: none;
     width: 33.33%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
     border-radius: 5px;
 }
 
 .services_img {
     background-color: #C4C4C4;
-    border-radius: 8px;
+    border-radius: 5px;
     display: block;
-    width: 406px;
+    width: 100%;
     height: 250px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.services_list .services_cost {
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 38px;
+    text-align: center;
+    color: #D46240;
+    
 }
 
 .services_button {
@@ -55,7 +70,7 @@
     text-decoration: none;
     background-color: #D46240;
     border-radius: 5px;
-    
+    text-align: center;
 }
 
 .services ul {
@@ -97,22 +112,4 @@
     text-align: center;
 }
 
-.services_list .services_cost {
-    font-family: "Open Sans", sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 28px;
-    line-height: 38px;
-    text-align: center;
-}
 
-.services_list .services_button {
-    display: block;
-    font-family: "Open Sans", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 33px;
-    align-items: center;
-    text-align: center;
-}
