--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -1,5 +1,10 @@
 .contacts p {
     text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    margin-left: 189.5px;
+    margin-right: 189.5px;
 }
 
 .contacts_wrap {
@@ -48,5 +53,20 @@
 
 .contacts_form_field__full {
     width: 100%;
+    text-align: center;
+}
+
+.contacts_button {
+    display: block;
+    width: 100%;
+    display: block;
+    font-family: "Open Sans", sans-serif;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FFFFFF;
+    background-color: #D46240;
+    border-radius: 5px;
     text-align: center;
 }
