--- a/src/styles/blocks/_team.scss
+++ b/src/styles/blocks/_team.scss
@@ -17,7 +17,7 @@
 }
 
 .team_item .name {
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     font-weight: 400;
     font-size: 24px;
     position: absolute;
