--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -14,6 +14,8 @@
 }
 
 .services_card {
+    //margin-left: 81px;
+    //margin-right: 81px;
     display: flex;
     flex-direction: column;
     height: 100%;
